--- a/example.ipynb
+++ b/example.ipynb
@@ -62,18 +62,6 @@
       "[INFO] eticas.metrics.tdx_inconsistency - Completed: 'Tdx_inconsistency'\n",
       "[INFO] eticas.model.ml_model - Drift audit finished for model: ML Testing Regression\n"
      ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'MLModel' object has no attribute 'df_results_metric'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 52\u001b[0m\n\u001b[1;32m     46\u001b[0m model\u001b[38;5;241m.\u001b[39mrun_impacted_audit(dataset_path \u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfiles/example_impact_binary_2.csv\u001b[39m\u001b[38;5;124m'\u001b[39m, \n\u001b[1;32m     47\u001b[0m                                                 output_column \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrecorded_outcome\u001b[39m\u001b[38;5;124m'\u001b[39m,positive_output \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m1\u001b[39m])\n\u001b[1;32m     48\u001b[0m model\u001b[38;5;241m.\u001b[39mrun_drift_audit(dataset_path_dev \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfiles/example_training_binary_2.csv\u001b[39m\u001b[38;5;124m'\u001b[39m, \n\u001b[1;32m     49\u001b[0m                       output_column_dev \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124moutcome\u001b[39m\u001b[38;5;124m'\u001b[39m, positive_output_dev \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m1\u001b[39m],\n\u001b[1;32m     50\u001b[0m                     dataset_path_prod \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfiles/example_operational_binary_2.csv\u001b[39m\u001b[38;5;124m'\u001b[39m, \n\u001b[1;32m     51\u001b[0m                       output_column_prod \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpredicted_outcome\u001b[39m\u001b[38;5;124m'\u001b[39m, positive_output_prod \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m1\u001b[39m])\n\u001b[0;32m---> 52\u001b[0m audit_result \u001b[38;5;241m=\u001b[39m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdf_results\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnorm_values\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/Documents/eticas/Code/eticas-audit/eticas/model/ml_model.py:363\u001b[0m, in \u001b[0;36mMLModel.df_results\u001b[0;34m(self, norm_values)\u001b[0m\n\u001b[1;32m    361\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdf_results_norm()\n\u001b[1;32m    362\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 363\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdf_results_metric\u001b[49m()\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'MLModel' object has no attribute 'df_results_metric'"
-     ]
     }
    ],
    "source": [
@@ -128,31 +116,132 @@
     "                      output_column_dev = 'outcome', positive_output_dev = [1],\n",
     "                    dataset_path_prod = 'files/example_operational_binary_2.csv', \n",
     "                      output_column_prod = 'predicted_outcome', positive_output_prod = [1])\n",
-    "audit_result = model.df_results(norm_values=False)"
+    "audit_result = model.df_results(norm_values=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>group</th>\n",
+       "      <th>metric</th>\n",
+       "      <th>attribute</th>\n",
+       "      <th>stage</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">benchmarking</th>\n",
+       "      <th rowspan=\"5\" valign=\"top\">da_inconsistency</th>\n",
+       "      <th rowspan=\"3\" valign=\"top\">age</th>\n",
+       "      <th>impact</th>\n",
+       "      <td>45.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>production</th>\n",
+       "      <td>44.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>training</th>\n",
+       "      <td>44.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">ethnicity</th>\n",
+       "      <th>impact</th>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>production</th>\n",
+       "      <td>20.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">performance</th>\n",
+       "      <th>precision</th>\n",
+       "      <th>sex_ethnicity</th>\n",
+       "      <th>training</th>\n",
+       "      <td>48.82</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"4\" valign=\"top\">recall</th>\n",
+       "      <th>age</th>\n",
+       "      <th>training</th>\n",
+       "      <td>49.34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ethnicity</th>\n",
+       "      <th>training</th>\n",
+       "      <td>50.65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sex</th>\n",
+       "      <th>training</th>\n",
+       "      <td>50.95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sex_ethnicity</th>\n",
+       "      <th>training</th>\n",
+       "      <td>50.16</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>128 rows × 1 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "{'ref': 80,\n",
-       " 'training_DI': 0.99,\n",
-       " 'training_SPD': -0.0,\n",
-       " 'training_TPR': 1.0364,\n",
-       " 'training_FPR': 1.0131,\n",
-       " 'training_PPV': 1.0364,\n",
-       " 'training_PNV': 1.0131,\n",
-       " 'operational_DI': 0.57,\n",
-       " 'operational_SPD': -0.24,\n",
-       " 'impact_DI': 0.34,\n",
-       " 'impact_SPD': -0.44}"
+       "                                                        value\n",
+       "group        metric           attribute     stage            \n",
+       "benchmarking da_inconsistency age           impact       45.0\n",
+       "                                            production   44.5\n",
+       "                                            training     44.8\n",
+       "                              ethnicity     impact       10.0\n",
+       "                                            production   20.0\n",
+       "...                                                       ...\n",
+       "performance  precision        sex_ethnicity training    48.82\n",
+       "             recall           age           training    49.34\n",
+       "                              ethnicity     training    50.65\n",
+       "                              sex           training    50.95\n",
+       "                              sex_ethnicity training    50.16\n",
+       "\n",
+       "[128 rows x 1 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,132 +315,6 @@
    ],
    "source": [
     "model.training_results['dxa_inconsistency']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "list.remove(x): x not in list",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mlista\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mremove\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43ma\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m lista\n",
-      "\u001b[0;31mValueError\u001b[0m: list.remove(x): x not in list"
-     ]
-    }
-   ],
-   "source": [
-    "lista.remove('a')\n",
-    "lista"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "df = pd.DataFrame(columns=['metric','group','stage','value','comments'])\n",
-    "df = df.set_index(['metric','group','stage'])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.loc[('da','age','training'),'value'] = 5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>value</th>\n",
-       "      <th>comments</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>metric</th>\n",
-       "      <th>group</th>\n",
-       "      <th>stage</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>da</th>\n",
-       "      <th>age</th>\n",
-       "      <th>training</th>\n",
-       "      <td>5</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                      value comments\n",
-       "metric group stage                  \n",
-       "da     age   training     5      NaN"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n"
-     ]
-    }
-   ],
-   "source": [
-    "if {'hola':1} :\n",
-    "    print(1)"
    ]
   },
   {
