--- a/example.ipynb
+++ b/example.ipynb
@@ -602,7 +602,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py311",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
